--- a/ControlSUR/ControlSUR.csproj
+++ b/ControlSUR/ControlSUR.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{C0A5DEA2-F54F-4CDD-A345-4E034A9D45BA}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Solicitudes</RootNamespace>
-    <AssemblyName>Solicitudes</AssemblyName>
+    <RootNamespace>ControlSUR</RootNamespace>
+    <AssemblyName>ControlSUR</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -64,6 +64,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
